add papers and codes

--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
                         <div class='paper-authors'>
                             <b>Hongxin Wei</b>, Renchunzi Xie, Hao Cheng, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An, <a href="https://pages.cs.wisc.edu/~sharonli/" target="_blank" style="color:#4f6071">Sharon Li</a>
                         </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2205.09310.pdf" target="_blank">[Paper]</a>
+                        </div>
                     </div>
                 </div>
 
@@ -287,6 +290,9 @@
                         <div class='paper-authors'>
                             <b>Hongxin Wei</b>, <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, Renchunzi Xie, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, Bo An
                         </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2206.08802.pdf" target="_blank">[Paper]</a>
+                        </div>
                     </div>
                 </div>
 
@@ -306,11 +312,11 @@
                         <div class='paper-authors'>
                             <b>Hongxin Wei</b>, Renchunzi Xie, Lei Feng, Bo Han, Bo An.
                         </div>
+                        <div>
+                            <a href="/docs/papers/2022TNNLS.pdf" target="_blank">[Paper]</a>
+                        </div>
                     </div>
                 </div>
-
-
-
 
 
                 <div class='row vspace-top'>
@@ -329,6 +335,9 @@
                         </div>
                         <div class='paper-authors'>
                             Renchunzi Xie, <b>Hongxin Wei</b> <sup>*</sup>, Lei Feng,  Bo An.
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2201.06001.pdf" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
