--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2205.09310.pdf" target="_blank">[Paper]</a>
+                            <a href="https://github.com/hongxin001/logitnorm_ood" target="_blank">[Code]</a>
                         </div>
                     </div>
                 </div>
@@ -292,6 +293,7 @@
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2206.08802.pdf" target="_blank">[Paper]</a>
+                            <a href="https://github.com/hongxin001/open-sampling" target="_blank">[Code]</a>
                         </div>
                     </div>
                 </div>
@@ -361,6 +363,7 @@
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2106.10891.pdf" target="_blank">[Paper]</a>
+                            <a href="https://github.com/hongxin001/ODNL" target="_blank">[Code]</a>
                         </div>
                     </div>
                 </div>
