disable related confereneces

--- a/index.html
+++ b/index.html
@@ -586,13 +586,13 @@
                     </div>
                 </div> -->
 
-                <div class='vspace-top'>
+                <!-- <div class='vspace-top'>
                     <h1>Relevant Conferences</h1>
                 </div>
                 <div class='row vspace-top-conferences'>
                     <iframe src="https://confsearch.ethz.ch/confsearch/faces/pages/staticresults.jsp?query=aaai%20ijcai%20kdd%20icml%20www%20NeurIPS%20cvpr%20iccv%20iclr&sortMode=1&graphicView=1" height="700" width="800" name="confsearch_frame"
                         frameborder="0"> </iframe>
-                </div>
+                </div> -->
                 
                 <!-- <div class='vspace-top'>
                     <h1>Website Visitors</h1>
