--- a/index.html
+++ b/index.html
@@ -540,6 +540,56 @@
                     </div>
                 </div>
 
+
+                <div class='vspace-top'>
+                    <h1>Personal Project</h1>
+                    <!-- (* Corresponding author; &#8224 Equal contribution) -->
+                    <!-- <span style="font-size: 15px; vertical-align: bottom;">(* Corresponding author; &#8224 Equal contribution)</span> -->
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            RussellCloud -- ML platform for researcher
+                        </div>
+                        <div class='paper-desc'>
+                            Affordable Deep Learning for Everyone. The service is shut down in 2019.
+                        </div>
+                        <div>
+                            <a href="https://pypi.org/project/russell-cli/" target="_blank">[CLI Tool]</a>
+                            <a href="https://github.com/RussellCloud/russell-docs" target="_blank">[Manual Doc (Chinese)] </a>
+                            <a href="https://zhuanlan.zhihu.com/p/47706629" target="_blank">[Zhihu]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Arxiv Daily -- Miniapp on Wechat
+                        </div>
+                        <div class='paper-desc'>
+                            A fast way to track the latest research papers on mobile devices.
+                        </div>
+                        <div>
+                            <a href="https://github.com/RussellCloud/arxiv_daily_weapp" target="_blank">[Code]</a>
+                            <a href="https://zhuanlan.zhihu.com/p/76578218" target="_blank">[Zhihu]</a>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- <div class='vspace-top'>
                     <h1>Collaborators</h1>
                 </div>
