--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
                         <div>
                             <a href="https://arxiv.org/pdf/2205.09310.pdf" target="_blank">[Paper]</a>
                             <a href="https://github.com/hongxin001/logitnorm_ood" target="_blank">[Code]</a>
+                            <a href="https://twitter.com/SharonYixuanLi/status/1545806805871230976" target="_blank">[Tweet]</a>
                         </div>
                     </div>
                 </div>
