--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        June 2022
+                    </div>
+                    <div class="col">
+                        I will be serving as a reviewer for ICLR 2023.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         May 2022
                     </div>
                     <div class="col">
@@ -248,6 +257,41 @@
 
                 <div id='header-text-remark'>
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
+                </div>
+
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Can Adversarial Training Be Manipulated By Non-Robust Features?
+                        </div>
+                        <div class='paper-desc'>
+                            NeurIPS 2022
+                        </div>
+                        <div class='paper-authors'>
+                            <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, <b>Hongxin Wei</b>, Jinfeng Yi, Shengjun Huang, Songcan Chen
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
+                        </video>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Analytic Class-Incremental Learning with Absolute Memorization and Privacy Protection.
+                        </div>
+                        <div class='paper-desc'>
+                            NeurIPS 2022
+                        </div>
+                        <div class='paper-authors'>
+                            Huiping Zhuang, Zhenyu Weng, <b>Hongxin Wei</b>, Renchunzi Xie, Toh Kar-Ann, Zhiping Lin
+                        </div>
+                    </div>
                 </div>
 
                 <div class='row vspace-top'>
@@ -508,39 +552,7 @@
                 </div>
 
                 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
-                        </video>
-                    </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Can Adversarial Training Be Manipulated By Non-Robust Features?
-                        </div>
-                        <div class='paper-authors'>
-                            <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, <b>Hongxin Wei</b>, Jinfeng Yi, Shengjun Huang, Songcan Chen
-                        </div>
-                    </div>
-                </div>
-
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="lfns/img/rooms_360_compressed.mp4" type="video/mp4">
-                        </video>
-                    </div> -->
-
-                    <div class="col">
-                        <div class='paper-title'>
-                            Analytic Class-Incremental Learning with Absolute Memorization and Privacy Protection.
-                        </div>
-                        <div class='paper-authors'>
-                            Huiping Zhuang, Zhenyu Weng, <b>Hongxin Wei</b>, Renchunzi Xie, Toh Kar-Ann, Zhiping Lin
-                        </div>
-                    </div>
-                </div>
 
 
                 <div class='vspace-top'>
