--- a/index.html
+++ b/index.html
@@ -605,51 +605,18 @@
                     </div>
                 </div>
 
-                <!-- <div class='vspace-top'>
-                    <h1>Collaborators</h1>
-                </div>
-                <div class='row vspace-top-news'>
-                    <div class="col">
-                        <li><a href="https://lfeng-ntu.github.io/" target="_blank">Lei Feng</a> </li>
-                    </div>
-                </div>
-
-                <div class='row vspace-top-news'>
-                    <div class="col">
-                        <li><a href="https://bhanml.github.io/" target="_blank">Bo Han</a> </li>
-                    </div>
-                </div>
-
-                
-                <div class='row vspace-top-news'>
-                    <div class="col">
-                        <li><a href="https://scholar.google.com/citations?user=JEVpgE8AAAAJ&hl=en" target="_blank">Rundong Wang</a> </li>
-                    </div>
-                </div>
-
-                <div class='row vspace-top-news'>
-                    <div class="col">
-                        <li><a href="http://parnec.nuaa.edu.cn/2020/0623/c12783a205854/page.htm" target="_blank">Lue Tao</a> </li>
-                    </div>
-                </div>
-
-                <div class='row vspace-top-news'>
-                    <div class="col">
-                        <li><a href="https://scholar.google.com/citations?user=EQSNE-wAAAAJ&hl=en" target="_blank">Renchunzi Xie</a> </li>
-                    </div>
-                </div>
-
-                <div class='row vspace-top-news'>
-                    <div class="col">
-                        <li><a href="https://dblp.org/pid/256/5052.html" target="_blank">Yuzhou Cao</a> </li>
-                    </div>
-                </div>
-
-                <div class='row vspace-top-news'>
-                    <div class="col">
-                        <li><a href="https://bhanml.github.io/" target="_blank">Ziqi Zhang</a> </li>
-                    </div>
-                </div> -->
+                <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                    <tr>
+                      <td style="padding:0px">
+                        <br>
+                        <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=919191&w=a&t=tt&d=ep-5MSCjViZ8GSZEGsLxM4xvm8b8OP7cqrBY_dV9XQo&co=ffffff&cmo=ed8d8d&cmn=7bf27b&ct=000000'></script>
+                        <p style="text-align:right;font-size:small;">
+                          <br>
+                          last modified in 22.09
+                        </p>
+                        <br>
+                    </tr></tbody>
+                </table>
 
                 <!-- <div class='vspace-top'>
                     <h1>Relevant Conferences</h1>
