--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                     </div>
                 </div>
 
-                <table style="width:80%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                <!-- <table style="width:80%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                     <tr>
                       <td style="padding:0px">
                         <br>
@@ -616,7 +616,7 @@
                         </p>
                         <br>
                     </tr></tbody>
-                </table>
+                </table> -->
 
                 <!-- <div class='vspace-top'>
                     <h1>Relevant Conferences</h1>
