--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
                 <p>
                     I am a final-year Ph.D. student at the <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering</a>, <a href="https://www.ntu.edu.sg/Pages/home.aspx" target="_blank">Nanyang Technological University</a>, supervised by <a href="https://personal.ntu.edu.sg/boan/" target="_blank">Prof. Bo An</a>.
                     I am currently working as a visiting scholar in the group of <a href="https://pages.cs.wisc.edu/~sharonli/" target="_blank">Prof. Sharon Yixuan Li</a> at the <a href="https://www.cs.wisc.edu/" target="_blank">University of Wisconsin Madison</a> during Jul-Dec 2022.
-                    Previously I spent a wonderful year as a research assistant in <a href="https://iiis.tsinghua.edu.cn/" target="_blank">the Institute for Interdisciplinary Information Sciences</a> at Tsinghua University, working with <a href="https://dblp.org/pid/96/3886.html" target="_blank">Prof. Pingzhong Tang</a>.
+                    Previously I spent a wonderful year as a research assistant in <a href="https://iiis.tsinghua.edu.cn/" target="_blank">the Institute for Interdisciplinary Information Sciences</a> at Tsinghua University.
                     Prior to that, I received my B.E. in Software Engineering from <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a> in 2016.
                     I am interested in the opportunity of Postdoc or faculty position (may starting from Spring 2023).
                 </p>
                 <p>
-                    My research interest lies in robust deep learning, including robustness against noisy labels, out-of-distribution examples, and adversarial examples.
-                    The goal of my research is to develop reliable learning systems, which can work safely and adaptively in the presence of noisy/biased/malicious data stream in either the train or test datasets.
+                    <!-- My research interest is within the scope of robust deep learning, including robustness against noisy labels, out-of-distribution examples, and adversarial examples. -->
+                    My research interest falls in the scope of Natural Robustness, which preserves model performance under naturally induced data corruptions or alterations across the machine learning pipeline. Under this concept, my research mainly focused on the two naturally occurring issues: label corruption (for y) and distribution shift (for x), which lie in the subareas of weakly supervised learning and open-world machine learning respectively.
+                    The goal of my research is to build a reliable learning system, which can work safely and adaptively in the presence of unexpected data conditions across the entire pipeline.
                     <!-- Most of my work explore, understand, and mitigate the problem settings where neural networks would naturally fails. -->
                     Research topics that I am currently working on include:
                 </p>
@@ -137,6 +138,15 @@
 
                 <div class='vspace-top'>
                     <h1>News</h1>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        October 2022
+                    </div>
+                    <div class="col">
+                        I am honored to be recognized as <a href="https://neurips.cc/Conferences/2022/ProgramCommittee" target="_blank">Top Reviewers</a> in NeurIPS 2022.
+                    </div>
                 </div>
 
                 <div class='row vspace-top-news'>
