--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <div>
                     <a href="https://github.com/hongxin001", target="_blank">[GitHub]</a>
                     <a href="https://scholar.google.com/citations?user=cABH034AAAAJ&hl=en", target="_blank">[Google Scholar]</a>
-                    <a href="docs/CV_hongxin_2022_06_29.pdf", target="_blank">[Download CV]</a>
+                    <a href="docs\CV_hongxin_2022_10_08.pdf", target="_blank">[Download CV]</a>
                   </div>
 
                 </div>
@@ -125,14 +125,13 @@
                 </p>
                 <p>
                     <!-- My research interest is within the scope of robust deep learning, including robustness against noisy labels, out-of-distribution examples, and adversarial examples. -->
-                    My research interest falls in the scope of Natural Robustness, which preserves model performance under naturally induced data corruptions or alterations across the machine learning pipeline. Under this concept, my research mainly focused on the two naturally occurring issues: label corruption (for y) and distribution shift (for x), which lie in the subareas of weakly supervised learning and open-world machine learning respectively.
+                    My research interest falls in the scope of Natural Robustness, which preserves model performance under naturally induced data corruptions or alterations across the machine learning pipeline.
                     The goal of my research is to build a reliable learning system, which can work safely and adaptively in the presence of unexpected data conditions across the entire pipeline.
                     <!-- Most of my work explore, understand, and mitigate the problem settings where neural networks would naturally fails. -->
                     Research topics that I am currently working on include:
                 </p>
                 <li> <i>Learning with (open-set) noisy labels;</i> </li>
-                <li> <i>Out-of-distribution detection;</i> </li>
-                <li> <i>Adversarial attack and defense; </i> </li>
+                <li> <i>Out-of-distribution detection and generalization;</i> </li>
                 <li> <i>Uncertainty estimation. </i> </li>
 
 
