--- a/index.html
+++ b/index.html
@@ -93,13 +93,17 @@
                   <div id='header-text-name'>
                     Hongxin Wei
                   </div>
+                </br>
                   <div id='header-text-title'>
                     Ph.D. Candidate @ NTU, Singapore
                   </div>
-                <!-- </br> -->
                   <div id='header-text-email'>
                     hongxin001 [at] e.ntu.edu.sg
                   </div>
+                  <div id='header-text-title'>
+                    <font style="background: yellow;"> Looking for faculty position starting from Spring 2023! </font> <br>
+                  </div>
+                </br>
                   <div>
                     <a href="https://github.com/hongxin001", target="_blank">[GitHub]</a>
                     <a href="https://scholar.google.com/citations?user=cABH034AAAAJ&hl=en", target="_blank">[Google Scholar]</a>
@@ -121,7 +125,7 @@
                     I am currently working as a visiting scholar in the group of <a href="https://pages.cs.wisc.edu/~sharonli/" target="_blank">Prof. Sharon Yixuan Li</a> at the <a href="https://www.cs.wisc.edu/" target="_blank">University of Wisconsin Madison</a> during Jul-Dec 2022.
                     Previously I spent a wonderful year as a research assistant in <a href="https://iiis.tsinghua.edu.cn/" target="_blank">the Institute for Interdisciplinary Information Sciences</a> at Tsinghua University.
                     Prior to that, I received my B.E. in Software Engineering from <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a> in 2016.
-                    I am interested in the opportunity of Postdoc or faculty position (may starting from Spring 2023).
+                    <!-- I am interested in the opportunity of Postdoc or faculty position (may starting from Spring 2023). -->
                 </p>
                 <p>
                     <!-- My research interest is within the scope of robust deep learning, including robustness against noisy labels, out-of-distribution examples, and adversarial examples. -->
