--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
             border: 3px solid white;
           }
           #header-text {
-            margin-top: 60px;
+            margin-top: 80px;
             margin-left: 220px;
           }
           #header-text-name {
+            margin-top: 60px;
             font-size: 40px;
           }
           #header-text-email {
@@ -100,7 +101,7 @@
                   <div id='header-text-email'>
                     hongxin001 [at] e.ntu.edu.sg
                   </div>
-                  <div id='header-text-title'>
+                  <div id='header-text-desc'>
                     <font style="background: yellow;"> Looking for faculty position starting from Spring 2023! </font> <br>
                   </div>
                 </br>
