--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     hongxin001 [at] e.ntu.edu.sg
                   </div>
                   <div id='header-text-desc'>
-                    <font style="background: yellow;"> Looking for faculty position starting from Spring 2023! </font> <br>
+                    <font style="background: yellow;"> Looking for faculty position starting from Summer 2023! </font> <br>
                   </div>
                 </br>
                   <div>
