--- a/index.html
+++ b/index.html
@@ -274,6 +274,23 @@
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
+
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            A Generalized Unbiased Risk Estimator for Learning with Augmented Classes.
+                        </div>
+                        <div class='paper-desc'>
+                            AAAI 2023
+                        </div>
+                        <div class='paper-authors'>
+                            Senlin Shu, Shuo He, Haobo Wang, Hongxin Wei, Tao Xiang, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>
+                            <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, <b>Hongxin Wei</b>, Jinfeng Yi, Shengjun Huang, Songcan Chen
+                        </div>
+                    </div>
+                </div>
+
                 <div class='row vspace-top'>
 
                     <div class="col">
