--- a/index.html
+++ b/index.html
@@ -285,8 +285,7 @@
                             AAAI 2023
                         </div>
                         <div class='paper-authors'>
-                            Senlin Shu, Shuo He, Haobo Wang, Hongxin Wei, Tao Xiang, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>
-                            <a href="https://tlmichael.github.io/" target="_blank" style="color:#4f6071">Lue Tao</a>, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>, <b>Hongxin Wei</b>, Jinfeng Yi, Shengjun Huang, Songcan Chen
+                            Senlin Shu, Shuo He, Haobo Wang, <b>Hongxin Wei</b>, Tao Xiang, <a href="https://lfeng-ntu.github.io/" target="_blank" style="color:#4f6071">Lei Feng</a>
                         </div>
                     </div>
                 </div>
