--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class='vspace-top'>
                     <h1>News</h1>
                 </div>
-
+<!-- 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         December 2022
@@ -147,7 +147,7 @@
                     <div class="col">
                         I am going to join <a href="https://stat-ds.sustech.edu.cn/" target="_blank">the Department of Statistics and Data Science</a> at <a href="https://www.sustech.edu.cn/en/" target="_blank">SUSTech</a> (China, Shenzhen) as a tenure-track assistant professor in the summer of 2023.
                     </div>
-                </div>
+                </div> -->
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
