--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           }
           #header {
             background-color: #f4f4f4;
-            /*background-color: #FFFFFF;*/
+            /* background-color: #FFFFFF; */
             display: flex;
             align-items: flex-end;
             padding-top:60px;
@@ -33,13 +33,13 @@
           }
           #portrait {
             border: 3px solid white;
+            height: 12rem;
           }
           #header-text {
             margin-top: 80px;
             margin-left: 220px;
           }
           #header-text-name {
-            margin-top: 60px;
             font-size: 40px;
           }
           #header-text-email {
@@ -94,17 +94,12 @@
                   <div id='header-text-name'>
                     Hongxin Wei
                   </div>
-                </br>
                   <div id='header-text-title'>
                     Ph.D. Candidate @ NTU, Singapore
                   </div>
                   <div id='header-text-email'>
                     hongxin001 [at] e.ntu.edu.sg
                   </div>
-                  <div id='header-text-desc'>
-                    <font style="background: yellow;"> Looking for faculty position starting from Summer 2023! </font> <br>
-                  </div>
-                </br>
                   <div>
                     <a href="https://github.com/hongxin001", target="_blank">[GitHub]</a>
                     <a href="https://scholar.google.com/citations?user=cABH034AAAAJ&hl=en", target="_blank">[Google Scholar]</a>
