--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <h1>Bio</h1>
                 <p>
                     I am a final-year Ph.D. student at the <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering</a>, <a href="https://www.ntu.edu.sg/Pages/home.aspx" target="_blank">Nanyang Technological University</a>, supervised by <a href="https://personal.ntu.edu.sg/boan/" target="_blank">Prof. Bo An</a>.
-                    I am currently working as a visiting scholar in the group of <a href="https://pages.cs.wisc.edu/~sharonli/" target="_blank">Prof. Sharon Yixuan Li</a> at the <a href="https://www.cs.wisc.edu/" target="_blank">University of Wisconsin Madison</a> until Dec 2022.
+                    During my Ph.D, I was fortunate to work as a visiting scholar in the group of <a href="https://pages.cs.wisc.edu/~sharonli/" target="_blank">Prof. Sharon Yixuan Li</a> at the <a href="https://www.cs.wisc.edu/" target="_blank">University of Wisconsin Madison</a> in 2022.
                     Previously I spent a wonderful year as a research assistant in <a href="https://iiis.tsinghua.edu.cn/" target="_blank">the Institute for Interdisciplinary Information Sciences</a> at Tsinghua University.
                     Prior to that, I received my B.E. in Software Engineering from <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a> in 2016.
                     <!-- I am interested in the opportunity of Postdoc or faculty position (may starting from Spring 2023). -->
@@ -137,6 +137,24 @@
 
                 <div class='vspace-top'>
                     <h1>News</h1>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        December 2022
+                    </div>
+                    <div class="col">
+                        I am going to join <a href="https://stat-ds.sustech.edu.cn/" target="_blank">the Department of Statistics and Data Science</a> at <a href="https://www.sustech.edu.cn/en/" target="_blank">SUSTech</a> (China, Shenzhen) as a tenure-track assistant professor in the summer of 2023.
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        December 2022
+                    </div>
+                    <div class="col">
+                        I will be serving as a reviewer for CVPR 2023, ICML 2023, IJCAI 2023.
+                    </div>
                 </div>
 
                 <div class='row vspace-top-news'>
@@ -269,6 +287,20 @@
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Multiple-Instance Learning from Unlabeled Bags with Pairwise Similarity.
+                        </div>
+                        <div class='paper-desc'>
+                            TKDE
+                        </div>
+                        <div class='paper-authors'>
+                            Lei Feng, Senlin Shu, Yuzhou Cao, Lue Tao, <b>Hongxin Wei</b>, Tao Xiang, Bo An, Gang Niu
+                        </div>
+                    </div>
+                </div>
 
                 <div class='row vspace-top'>
 
