--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           #portrait {
             border: 3px solid white;
             height: 12rem;
+            min-width: 8rem;
           }
           #header-text {
             margin-top: 80px;
