--- a/index.html
+++ b/index.html
@@ -292,6 +292,21 @@
 
                     <div class="col">
                         <div class='paper-title'>
+                            Counting and mapping of subwavelength nanoparticles from a single shot scattering pattern.
+                        </div>
+                        <div class='paper-desc'>
+                            Nanophotonics
+                        </div>
+                        <div class='paper-authors'>
+                            Eng Aik Chan, Carolina Rendón-Barraza, Benquan Wang, Tanchao Pu, Jun-Yu Ou, <b>Hongxin Wei</b>, Giorgio Adamo, Bo An, Nikolay I. Zheludev
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
                             Multiple-Instance Learning from Unlabeled Bags with Pairwise Similarity.
                         </div>
                         <div class='paper-desc'>
