--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 				            TNNLS
                         </div>
                         <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Renchunzi Xie, Lei Feng, Bo Han, Bo An.
+                            <b>Hongxin Wei</b>, Renchunzi Xie, Lei Feng, Bo An.
                         </div>
                         <div>
                             <a href="/docs/papers/2022TNNLS.pdf" target="_blank">[Paper]</a>
