--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
                     <!-- Most of my work explore, understand, and mitigate the problem settings where neural networks would naturally fails. -->
                     Research topics that I am currently working on include:
                 </p>
-                <li> <i>Learning with (open-set) noisy labels;</i> </li>
-                <li> <i>Out-of-distribution detection and generalization;</i> </li>
-                <li> <i>Uncertainty estimation. </i> </li>
+                <li> <i>Open-world machine learning;</i> </li>
+                <li> <i>Uncertainty estimation and calibration. </i> </li>
+                <li> <i>AI safety and alignment;</i> </li>
+
 
 
                 <div class='vspace-top'>
@@ -154,7 +155,7 @@
                         December 2022
                     </div>
                     <div class="col">
-                        I will be serving as a reviewer for CVPR 2023, ICML 2023, IJCAI 2023.
+                        I will be serving as a reviewer for CVPR 2023, ICML 2023, IJCAI 2023, KDD 2023 and ICCV 2023.
                     </div>
                 </div>
 
