--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </p>
                 <li> <i>Open-world machine learning;</i> </li>
                 <li> <i>AI safety and alignment;</i> </li>
-                <li> <i>Uncertainty estimation and calibration. </i> </li>
+                <li> <i>Model calibration and adaptation. </i> </li>
 
 
 
