--- a/index.html
+++ b/index.html
@@ -131,9 +131,10 @@
                     <!-- Most of my work explore, understand, and mitigate the problem settings where neural networks would naturally fails. -->
                     Research topics that I am currently working on include:
                 </p>
-                <li> <i>Open-world machine learning;</i> </li>
-                <li> <i>AI safety and alignment;</i> </li>
-                <li> <i>Model calibration and adaptation. </i> </li>
+                <li> <i>Auditing and handling data quality;</i> </li>
+                <li> <i>Stress testing and adapting in extreme data conditions. </i> </li>
+                <li> <i>Protecting data copyright and privacy;</i> </li>
+                <li> <i>Exploring non-conventional data sources. </i> </li>
 
 
 
