--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class='vspace-top'>
                     <h1>News</h1>
                 </div>
-<!-- 
+
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         December 2022
@@ -151,7 +151,7 @@
                     <div class="col">
                         I am going to join <a href="https://stat-ds.sustech.edu.cn/" target="_blank">the Department of Statistics and Data Science</a> at <a href="https://www.sustech.edu.cn/en/" target="_blank">SUSTech</a> (China, Shenzhen) as a tenure-track assistant professor in the summer of 2023.
                     </div>
-                </div> -->
+                </div>
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
@@ -290,6 +290,21 @@
 
                 <div id='header-text-remark'>
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
+                </div>
+
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Mitigating Memorization of Noisy Labels by Clipping the Model Prediction.
+                        </div>
+                        <div class='paper-desc'>
+                            ICML 2023
+                        </div>
+                        <div class='paper-authors'>
+                            <b>Hongxin Wei</b>, Huiping Zhuang, Renchunzi Xie, Lei Feng, Gang Niu, Bo An, Yixuan Li
+                        </div>
+                    </div>
                 </div>
 
                 <div class='row vspace-top'>
